--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <input type="number" name="Humidity" placeholder="Humidity" step='any' required="required" />
             <input type="number" name="pH" placeholder="pH" step='any' required="required" />
             <input type="number" name="Rainfall" placeholder="Rainfall" step='any' required="required" />
-            <button type="submit">PREDICT</button>
+            <button type="submit">Predict</button>
         </form>
         <h1 id="predi">
             {{prediction}}
