--- a/static/style.css
+++ b/static/style.css
@@ -34,3 +34,29 @@ button {
     margin-left: 60px;
     color: black;
 }
+
+@media (max-width: 768px) {
+    body {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    h1 {
+        margin-left: 30px;
+        font-size: 24px;
+    }
+
+    input {
+        width: 100%;
+    }
+
+    button {
+        padding: 12px 30px;
+        font-size: 18px;
+        margin-left: 0;
+    }
+
+    #predi {
+        margin-left: 0;
+    }
+}
